objects/CountyZip__c.object
<CustomObject>
    <description>A list of zip codes in each county.</description>
    <fields>
        <fullName>CountyZipEID__c</fullName>
        <description>The Enterprise ID for this record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this record.</inlineHelpText>
        <label>County Zip EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The county where this zip code is found.</description>
        <inlineHelpText>The county where this zip code is found.</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>County Zip Codes</relationshipLabel>
        <relationshipName>CountyZipCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>A zip code inside this county.</description>
        <externalId>true</externalId>
        <inlineHelpText>A zip code inside this county.</inlineHelpText>
        <label>Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>County Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CountyZipName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>